--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
        </configuration>
      </plugin>
      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
+     <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
